tests/paczka1/fuzzy1/42696244.err
Error in line 1: A803A22553,4
Error in line 2: A803 A225 82,8
Error in line 5: hrGa A803 72,1
Error in line 19: bwR31sUKmt A225 181,0
Error in line 30: A803 S103 75,9
Error in line 34: PuegN A496 30,13
Error in line 20: bwR31sUKmt A496 1,5
Error in line 14: PuegN A803 10,1
